--- a/two.html
+++ b/two.html
@@ -34,7 +34,7 @@
             color: rgb(165, 115, 44);
             text-align: center;
         }
-        div{
+        div.f{
             background-color: antiquewhite;
             border:4px dotted rgb(165, 115, 44);
             width: 60%;
@@ -43,7 +43,7 @@
             border-radius: 1cm;
             color: rgb(165, 115, 44)
         }
-        div>ul{
+        div.f>ul{
             font-size: 17pt;
         }
         
@@ -60,7 +60,7 @@
 
     <h1>ولايات محافظة مسندم</h1>
 
-    <div>
+    <div class="f">
         <h2>تتكون محافظة مسندم من 4 ولايات:</h2>
         <ul>
             <li>ولاية خصب: تعتبرخصب مركزا إقليميا لمحافظة مسندم في سلطنة عمان وتبعد عن مسقط العاصمة نحو 500 كم.تقع خصب في أقصى شمال المحافظة وتستمد اسمها من خصوبة تربتها ويوجد فيها ميناء خصب. ويوجد بها العديد من المعالم والمواقع الأثرية والتاريخية.</li>
